--- a/resources/data/html/createCardBoard.html
+++ b/resources/data/html/createCardBoard.html
@@ -1,21 +1,25 @@
 <div id="template--create-card-board" class="wrapper-layout">
     <header class="header">
         <div class="wrap">
-            header
+            <button class="btn-new-card" type="button">NEW CARD</button>
         </div>
     </header>
     <div id="container" class="container">
-        <div class="wrap">
-    이제 여기서 카드 만드는 곳이 나오는거임
+        <aside class="left-menu">
+            <ul>
+                <li>
+                    <a href="#">font</a>
+                    <ul>
+                        <li><a href="#">sdfsfdasfasf</a></li>
+                        <li><a href="#">asdftt</a></li>
+                        <li><a href="#">asdfsdf</a></li>
+                        <li><a href="#">asfsdf</a></li>
+                        <li><a href="#">adsfasdfsd</a></li>
+                    </ul>
+                </li>
 
-    create card start   
-    asdfasdfsddasfasdfasdfs
-    lorm10sl;dkfjasdl;fj;sdfj;ajfwsdf
-    Lorem ipsum dolor sit amet consectetur 
-    adipisicing elit. Eligendi reiciendis cum possimus quae repudianda
-    e assumenda ratione sequi laudantium aut aspernatur deleniti ea id amet r
-    erum ullam, adipisci ex voluptate dolorem?
-        </div>
+            </ul>
+        </aside>
     </div>
     <footer>
         <div class="wrap">
