--- a/resources/data/html/popupSelectTemp.html
+++ b/resources/data/html/popupSelectTemp.html
@@ -1,5 +1,5 @@
-<div id="template--horizontal">
-    <h4 class="popup-title">Please select Horizontal template</h4>
+<div id="template--select-temp">
+    <h4 class="popup-title"></h4>
     <div class="popup-content">
         <div class="choice-template-area">
             <ul class="template-slider">
