delete popup and create list system add..

--- a/createCard.html
+++ b/createCard.html
@@ -20,8 +20,8 @@
             <button class="btn-cencel">취소</button>
         </div>
     </div>   
-    <!-- <div class="overlay"></div>
-    <article class="popup"></article> -->
+    <div class="overlay"></div>
+    <article class="popup"></article> 
     <div id="wrapper" class="wrapper">
 
         <div id="template--create-card-board" class="wrapper-layout">
@@ -66,8 +66,9 @@
 
 <script src="/resources/plugIn/jquery/jquery-3.3.1.min.js"></script>
 <script src="/resources/plugIn/slick/slick.js"></script>
-<script src="/resources/js/createCardInterface.js"></script>
-<!-- <script src="/resources/js/createCardIntro.js"></script> -->
+<script src="/resources/js/createCardIntro.js"></script>
+
+
 
 </body>
 </html>
